tests/paczka1/fuzzy1/61300367.err
Error in line 2: 5jEcBoNt A330 42,8
Error in line 4: LLBSBoDGeUx A366 67,2
Error in line 9: 5jEcBoNt A729 67,1
Error in line 16: 3cKod A330 68,7
Error in line 28: y9S A366 81,2
Error in line 15: 5jEcBoNt A366 36,5
